--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "expo": "~41.0.1",
     "expo-location": "~12.0.4",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
     "react": "16.13.1",
@@ -31,11 +32,11 @@
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4",
-    "expo-secure-store": "~10.1.0"
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "eslint": "^7.31.0"
   },
   "private": true
 }
